# cheese_pl

./: .gitignore  CMakeLists.txt  Coordinate.cpp  Coordinate.h  LICENSE  configuration.cpp  configuration.h  curdle_info.txt  error.cpp  genpdf.ps1  genpdf.sh  head.tex  main.cpp  notes.txt  reference.md  unmangle.py  vcpkg.json  vterm.cpp
include/: Coordinate.h  NotImplementedException.h  configuration.h  error.h  stringutil.h  vterm.h
include/bacteria/: BacteriaContext.h  BacteriaNode.h  BacteriaReceiver.h  BacteriaReciever.h  BacteriaType.h  ExpressionContext.h  FunctionContext.h  FunctionInfo.h  ScopeContext.h  VariableInfo.h  WriteContext.h
include/bacteria/nodes/: expression_nodes.h  receiver_nodes.h  reciever_nodes.h
include/compression/: base64.h
include/curdle/: ComptimeInteger.h  FunctionTemplate.h  GlobalContext.h  Interface.h  Mixin.h  Project.h  Structure.h  Type.h  WeakPointer.h  builtin.h  comptime.h  curdle.h  functions.h  name_mangler.h  names.h  runtime.h  variables.h
include/curdle/enums/: SimpleOperation.h
include/curdle/types/: AnyType.h  ArrayType.h  BooleanType.h  BuiltinReferenceType.h  Complex64Type.h  ComposedFunctionType.h  ComptimeComplexType.h  ComptimeComposedFunctionType.h  ComptimeEnumType.h  ComptimeFloatType.h  ComptimeIntegerType.h  ComptimeStringType.h  ErrorType.h  Float64Type.h  FunctionPointerType.h  FunctionTemplateType.h  ImportedFunctionType.h  IntegerType.h  NoReturnType.h  PointerType.h  ReferenceType.h  Structure.h  TypeType.h  VoidType.h
include/curdle/values/: BuiltinFunctionReference.h  ComptimeArray.h  ComptimeBool.h  ComptimeComplex.h  ComptimeEnumLiteral.h  ComptimeFloat.h  ComptimeFunctionSet.h  ComptimeInteger.h  ComptimeObject.h  ComptimeString.h  ComptimeType.h  ComptimeVoid.h  ImportedFunction.h
include/lexer/: lexer.h
include/math/: BigInteger.h
include/memory/: garbage_collection.h
include/parser/: Node.h  parser.h
include/parser/nodes/: Import.h  OtherNodes.h  SingleMemberNodes.h  Structure.h  TerminalNodes.h  other_nodes.h  single_member_nodes.h  terminal_nodes.h
include/project/: GlobalContext.h  Machine.h  Project.h
include/tests/: tests.h
include/tools/: build.h  lower.h  parse.h  test.h  tools.h  translate.h
include/util/: Endianness.h  json_template.h  llvm_utils.h
lexer/: lexer.cpp  lexer.h
src/: Coordinate.cpp  configuration.cpp  error.cpp  main.cpp  stringutil.cpp  vterm.cpp
src/bacteria/: BacteriaContext.cpp  BacteriaNode.cpp  BacteriaReceiver.cpp  BacteriaType.cpp  FunctionContext.cpp  ScopeContext.cpp  VariableInfo.cpp
src/bacteria/nodes/: expression_nodes.cpp  receiver_nodes.cpp  reciever_nodes.cpp
src/compression/: base64.cpp
src/curdle/: ComptimeInteger.cpp  GlobalContext.cpp  Interface.cpp  Mixin.cpp  Project.cpp  Structure.cpp  Type.cpp  builtin.cpp  comptime.cpp  curdle.cpp  functions.cpp  names.cpp  runtime.cpp
src/curdle/enums/: SimpleOperation.cpp
src/curdle/types/: AnyType.cpp  ArrayType.cpp  BooleanType.cpp  BuiltinReferenceType.cpp  Complex64Type.cpp  ComposedFunctionType.cpp  ComptimeComplexType.cpp  ComptimeEnumType.cpp  ComptimeFloatType.cpp  ComptimeIntegerType.cpp  ComptimeStringType.cpp  ErrorType.cpp  Float64Type.cpp  FunctionPointerType.cpp  FunctionTemplateType.cpp  ImportedFunctionType.cpp  IntegerType.cpp  NoReturnType.cpp  PointerType.cpp  ReferenceType.cpp  Structure.cpp  TypeType.cpp  VoidType.cpp
src/curdle/values/: BuiltinFunctionReference.cpp  ComptimeArray.cpp  ComptimeBool.cpp  ComptimeComplex.cpp  ComptimeEnumLiteral.cpp  ComptimeFloat.cpp  ComptimeFunctionSet.cpp  ComptimeInteger.cpp  ComptimeObject.cpp  ComptimeString.cpp  ComptimeType.cpp  ComptimeVoid.cpp  ImportedFunction.cpp
src/lexer/: lexer.cpp
src/math/: BigInteger.cpp
src/memory/: garbage_collection.cpp
src/parser/: Node.cpp  parser.cpp
src/parser/nodes/: Import.cpp  Structure.cpp
src/project/: GlobalContext.cpp  Project.cpp
src/tests/: curdle_tests.cpp  lexer_tests.cpp  math_tests.cpp  parser_tests.cpp  parser_tests.json  tests.cpp
src/tools/: build.cpp  lower.cpp  parse.cpp  test.cpp  tools.cpp  translate.cpp
src/util/: json_template.cpp  llvm_utils.cpp
testenv/: curdle_tests.json  curdle_tests_todo.txt  entry.chs  example.chs  link_and_run.ps1  name_mangler.py  parser_tests.json  test_link.ps1  tests.json
testenv/templates/: binary_arithmetic_simple.json  binary_group.json  complex_one.json  float_one.json  integer_one.json
testenv/testenv_imports/: function_pointers.chs
testenv/testenv_src/: call_test.chs  entry_test.chs  fibonnaci.chs  hello_world.chs  hsv.chs  template_test.chs
